--- a/qa/suites/rados/verify/ceph-thrash/default.yaml
+++ b/qa/suites/rados/verify/ceph-thrash/default.yaml
@@ -1,9 +1,9 @@
-tasks:
-- install:
-- ceph:
+overrides:
+  ceph:
     log-whitelist:
     - wrongly marked me down
     - objects unfound and apparently lost
+tasks:
 - thrashosds:
     timeout: 1200
     chance_pgnum_grow: 1
