--- a/qa/suites/upgrade/jewel-x/point-to-point-x/point-to-point-upgrade.yaml
+++ b/qa/suites/upgrade/jewel-x/point-to-point-x/point-to-point-upgrade.yaml
@@ -112,6 +112,7 @@ workload_jewel:
          client.0:
            force-branch: ceph-jewel
            rgw_server: client.0
+           scan_for_encryption_keys: false
      - print: "**** done s3tests workload_jewel"
 upgrade-sequence_jewel:
    sequential:
