--- a/qa/suites/rados/singleton/all/cephtool.yaml
+++ b/qa/suites/rados/singleton/all/cephtool.yaml
@@ -26,6 +26,8 @@ tasks:
     - had wrong client addr
     - had wrong cluster addr
     - must scrub before tier agent can activate
+    - failsafe engaged, dropping updates
+    - failsafe disengaged, no longer dropping updates
 - workunit:
     clients:
       all:
