--- a/qa/suites/rados/mgr/clusters/2-node-mgr.yaml
+++ b/qa/suites/rados/mgr/clusters/2-node-mgr.yaml
@@ -1,5 +1,5 @@
 roles:
-- [mgr.x, mon.a, mds.a, mds.c, osd.0, client.0]
+- [mgr.x, mon.a, mon.c, mds.a, mds.c, osd.0, client.0]
 - [mgr.y, mon.b, mds.b, osd.1, osd.2, client.1]
 log-rotate:
   ceph-mds: 10G
