--- a/src/ceph.in
+++ b/src/ceph.in
@@ -71,11 +71,13 @@ def respawn_in_path(lib_path, pybind_path, pythonlib_path):
     if lib_path_var in os.environ:
         if lib_path not in os.environ[lib_path_var]:
             os.environ[lib_path_var] += ':' + lib_path
-            print(DEVMODEMSG, file=sys.stderr)
+	    if "CEPH_DEV" not in os.environ:
+                print(DEVMODEMSG, file=sys.stderr)
             os.execvp(py_binary, execv_cmd + sys.argv)
     else:
         os.environ[lib_path_var] = lib_path
-        print(DEVMODEMSG, file=sys.stderr)
+	if "CEPH_DEV" not in os.environ:
+            print(DEVMODEMSG, file=sys.stderr)
         os.execvp(py_binary, execv_cmd + sys.argv)
     sys.path.insert(0, os.path.join(MYDIR, pybind_path))
     sys.path.insert(0, os.path.join(MYDIR, pythonlib_path))
