ceph.spec.in, debian/control: add dep for python-prettytable
mgr/pybind/fsstatus already required this, but ceph.in does now.
Add as a build dependency as well to handle tests.

Signed-off-by: Dan Mick <dan.mick@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -121,6 +121,7 @@ BuildRequires:	pkgconfig
 BuildRequires:	python
 BuildRequires:	python-devel
 BuildRequires:	python-nose
+BuildRequires:	python-prettytable
 BuildRequires:	python-requests
 BuildRequires:	python-sphinx
 BuildRequires:	python-virtualenv
@@ -256,6 +257,7 @@ Requires:	python-rados = %{epoch}:%{version}-%{release}
 Requires:	python-rbd = %{epoch}:%{version}-%{release}
 Requires:	python-cephfs = %{epoch}:%{version}-%{release}
 Requires:	python-rgw = %{epoch}:%{version}-%{release}
+Requires:	python-prettytable
 Requires:	python-requests
 %{?systemd_requires}
 %if 0%{?suse_version}
