--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -82,7 +82,7 @@ endif()
 target_link_libraries(os kv)
 
 add_dependencies(os compressor_plugins)
-add_dependencies(os ceph_crypto_isal)
+add_dependencies(os crypto_plugins)
 
 
 if(HAVE_LIBAIO)
