--- a/qa/suites/kcephfs/recovery/tasks/data-scan.yaml
+++ b/qa/suites/kcephfs/recovery/tasks/data-scan.yaml
@@ -8,6 +8,8 @@ overrides:
       - error reading sessionmap
       - unmatched fragstat
       - was unreadable, recreating it now
+      - Scrub error on inode
+      - Metadata damage detected
 
 tasks:
   - cephfs_test_runner:
