--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -73,7 +73,7 @@ Name:		ceph
 Version:	@VERSION@
 Release:	@RPM_RELEASE@%{?dist}
 Summary:	User space components of the Ceph file system
-License:	LGPL-2.1 and CC-BY-SA-1.0 and GPL-2.0 and BSL-1.0 and GPL-2.0-with-autoconf-exception and BSD-3-Clause and MIT
+License:	LGPL-2.1 and CC-BY-SA-1.0 and GPL-2.0 and BSL-1.0 and GPL-2.0 WITH Autoconf-exception-2.0 and BSD-3-Clause and MIT
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
