--- a/src/rbd_replay/CMakeLists.txt
+++ b/src/rbd_replay/CMakeLists.txt
@@ -23,7 +23,7 @@ set(librbd_replay_ios_srcs
 add_library(rbd_replay_ios STATIC ${librbd_replay_ios_srcs})
 target_link_libraries(rbd_replay_ios librbd librados global)
 
-if(${WITH_BABELTRACE})
+if(HAVE_BABELTRACE)
   add_executable(rbd-replay-prep
     rbd-replay-prep.cc)
   target_link_libraries(rbd-replay-prep
@@ -39,4 +39,5 @@ if(${WITH_BABELTRACE})
     Boost::date_time
     )
   install(TARGETS rbd-replay-prep DESTINATION bin)
-endif(${WITH_BABELTRACE})
+endif(HAVE_BABELTRACE)
+
