--- a/src/mon/CMakeLists.txt
+++ b/src/mon/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(osd_mon_files
-  Monitor.cc)
-add_library(osd_mon_objs OBJECT ${osd_mon_files})
-
 set(lib_mon_srcs
   ${CMAKE_SOURCE_DIR}/src/auth/cephx/CephxKeyServer.cc
   ${CMAKE_SOURCE_DIR}/src/auth/cephx/CephxServiceHandler.cc
@@ -14,6 +10,7 @@ set(lib_mon_srcs
   FSCommands.cc
   MgrMonitor.cc
   MgrStatMonitor.cc
+  Monitor.cc
   MonmapMonitor.cc
   LogMonitor.cc
   AuthMonitor.cc
@@ -23,7 +20,10 @@ set(lib_mon_srcs
   PGMonitor.cc
   PGMap.cc
   ConfigKeyService.cc)
-add_library(mon STATIC ${lib_mon_srcs} $<TARGET_OBJECTS:mon_common_objs>
-  $<TARGET_OBJECTS:kv_objs> $<TARGET_OBJECTS:osd_mon_objs>
-  $<TARGET_OBJECTS:common_util_obj> $<TARGET_OBJECTS:heap_profiler_objs>)
+add_library(mon STATIC
+  ${lib_mon_srcs}
+  $<TARGET_OBJECTS:mon_common_objs>
+  $<TARGET_OBJECTS:kv_objs>
+  $<TARGET_OBJECTS:common_util_obj>
+  $<TARGET_OBJECTS:heap_profiler_objs>)
 target_link_libraries(mon ${ALLOC_LIBS})
