--- a/src/ceph.in
+++ b/src/ceph.in
@@ -363,9 +363,9 @@ def do_extended_help(parser, args, target, partial):
                                          prefix='get_command_descriptions',
                                          timeout=10)
         if ret:
-            print("couldn't get command descriptions for {0}: {1}".
-                  format(target, outs), file=sys.stderr)
-            return 1
+            print("couldn't get command descriptions for {0}: {1} ({2})".
+                  format(target, outs, ret), file=sys.stderr)
+            return ret
         else:
             return help_for_sigs(outbuf.decode('utf-8'), partial)
 
