--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "src/rapidjson"]
 	path = src/rapidjson
 	url = https://github.com/ceph/rapidjson
+[submodule "src/liblmdb"]
+	path = src/liblmdb
+	url = git@github.com:/LMDB/lmdb.git
