--- a/src/libcephd/CMakeLists.txt
+++ b/src/libcephd/CMakeLists.txt
@@ -33,6 +33,10 @@ if(NOT WITH_SYSTEM_ROCKSDB)
   list(APPEND merge_libs ${ROCKSDB_LIBRARIES})
 endif(NOT WITH_SYSTEM_ROCKSDB)
 
+if (NOT WITH_SYSTEM_LMDB)
+  list(APPEND merge_libs ${LMDB_LIBRARIES})
+endif(NOT WITH_SYSTEM_LMDB)
+
 if(HAVE_ARMV8_CRC)
   list(APPEND merge_libs common_crc_aarch64)
 endif(HAVE_ARMV8_CRC)
